--- a/Papaito/Gallerycss/galleriffic-3.css
+++ b/Papaito/Gallerycss/galleriffic-3.css
@@ -1,218 +1,267 @@
 div.content {
-	/* The display of content is enabled using jQuery so that the slideshow content won't display unless javascript is enabled. */
-	display: none;
-	/*float: right;*/
-	width: 1px;
-	height:1px; 
+    /* The display of content is enabled using jQuery so that the slideshow content won't display unless javascript is enabled. */
+    display: none;
+    /*float: right;*/
+    width: 1px;
+    height: 1px;
 }
-div.content a, div.navigation a {
-	text-decoration: none;
-	color: #777;
+
+div.content a,
+div.navigation a {
+    text-decoration: none;
+    color: #777;
 }
-div.content a:focus, div.content a:hover, div.content a:active {
-	text-decoration: underline;
+
+div.content a:focus,
+div.content a:hover,
+div.content a:active {
+    text-decoration: underline;
 }
+
 div.controls {
-	margin-top: 5px;
-	height: 20px;
+    margin-top: 5px;
+    height: 20px;
 }
+
 div.controls a {
-	padding: 5px;
+    padding: 5px;
 }
+
 /*slideshow control*/
 div.ss-controls {
-	margin-left:-55px;
-	margin-top:-5px;
-	width:100px;
+    margin-left: -55px;
+    margin-top: -5px;
+    width: 100px;
 }
+
 /*Next Previous Controls*/
 div.nav-controls {
-	/*margin-left:-175px;
+    /*margin-left:-175px;
 	margin-top:-17.5px;
 	width:200px;
-background:#fff;*/	
+background:#fff;*/
 }
+
 div.slideshow-container {
-	position: relative;
-	clear: both;
-	/*background:#fff;*/
-	height: 330px; /* This should be set to be at least the height of the largest image in the slideshow */
+    position: relative;
+    clear: both;
+    /*background:#fff;*/
+    height: 330px;
+    /* This should be set to be at least the height of the largest image in the slideshow */
 }
+
 div.loader {
-	position:absolute;
-margin-top:-352px;
-margin-left:-340px;
-	background-image: url("Gallerycss\loaderWhite.gif");
-	background-repeat: no-repeat;
-	background-position: center;
-	width: 800px;
-	height: 370px; /* This should be set to be at least the height of the largest image in the slideshow */
+    position: absolute;
+    margin-top: -352px;
+    margin-left: -340px;
+    background-image: url("Gallerycss\loaderWhite.gif");
+    background-repeat: no-repeat;
+    background-position: center;
+    width: 800px;
+    height: 370px;
+    /* This should be set to be at least the height of the largest image in the slideshow */
 }
-div.slideshow {
+
+div.slideshow {}
+
+div.slideshow span.image-wrapper {
+    /*display: block;*/
+    position: absolute;
+    /*background:#fff;*/
+    /*explorer 287*/
+    margin-top: -282px;
+    margin-left: -340px;
 
 }
-div.slideshow span.image-wrapper {
-	/*display: block;*/
-	position: absolute;
-	/*background:#fff;*/
-	/*explorer 287*/
-	margin-top: -282px;
-	margin-left: -340px;
-	
-}
+
 /*the size of the frame surrounding the image*/
 div.slideshow a.advance-link {
-	display: block;
-	width: 830px;
-	height: 380px; /* This should be set to be at least the height of the largest image in the slideshow */
-	line-height: 380px; /* This should be set to be at least the height of the largest image in the slideshow */
-	/*text-align: center;*/
+    display: block;
+    width: 830px;
+    height: 380px;
+    /* This should be set to be at least the height of the largest image in the slideshow */
+    line-height: 380px;
+    /* This should be set to be at least the height of the largest image in the slideshow */
+    /*text-align: center;*/
 }
-div.slideshow a.advance-link:hover, div.slideshow a.advance-link:active, div.slideshow a.advance-link:visited {
-	text-decoration: none;
+
+div.slideshow a.advance-link:hover,
+div.slideshow a.advance-link:active,
+div.slideshow a.advance-link:visited {
+    text-decoration: none;
 }
+
 div.slideshow img {
-	/*vertical-align: middle;*/
-	border: 1px solid #ccc;
-	height:370px;/*Customizing the image size*/
-	width:819px;
-	
+    /*vertical-align: middle;*/
+    border: 1px solid #ccc;
+    height: 370px;
+    /*Customizing the image size*/
+    width: 819px;
+
 }
+
 div.download {
-	float: right;
+    float: right;
 }
+
 /*The Container of the description*/
 div.caption-container {
-	position:absolute;
-	clear: left;
-	height:75px;
-	width:300px;
-	left:140px;
-	top:380px;
+    position: absolute;
+    clear: left;
+    height: 75px;
+    width: 300px;
+    left: 140px;
+    top: 380px;
 }
+
 /*Whats inside the description container,the text*/
 span.image-caption {
-	display: block;
-	position: absolute;
-	width: 300px;
-	height:300px;
-	top: 0;
-	left: 0;
-	font-family:'Adobe Heiti Std R';
-	color:Gray;
+    display: block;
+    position: absolute;
+    width: 300px;
+    height: 300px;
+    top: 0;
+    left: 0;
+    font-family: 'Adobe Heiti Std R';
+    color: Gray;
 
 }
+
 div.caption {
-	padding: 12px;
+    padding: 12px;
 }
+
 div.image-title {
-	font-weight: bold;
-	font-size: 1.4em;
+    font-weight: bold;
+    font-size: 1.4em;
 }
+
 div.image-desc {
-	line-height: 1.3em;
-	padding-top: 12px;
-}
-/*thubmnails containter*/
-div.navigation 
-{
-	/* The navigation style is set using jQuery so that the javascript specific styles won't be applied unless javascript is enabled. */
+    line-height: 1.3em;
+    padding-top: 12px;
 }
 
-.RoomB{margin-left:55px;}	
-.RoomC{margin-left:110px;}
-.LookAroundComplex{ margin-left:166px;}
-.ControlRoom{margin-left:108px;}
-.LookAroundStudio{margin-left:200px;}
+/*thumbnails containter*/
+div.navigation {
+    /* The navigation style is set using jQuery so that the javascript specific styles won't be applied unless javascript is enabled. */
+}
 
-ul.thumbs 
-{
-    position:absolute;
-	clear: both;
-	margin-left:500px;
-	margin-top:-336px;
-	padding: 0px;
-    width:290px;	
+.RoomB {
+    margin-left: 55px;
+}
+
+.RoomC {
+    margin-left: 110px;
+}
+
+.LookAroundComplex {
+    margin-left: 166px;
+}
+
+.ControlRoom {
+    margin-left: 108px;
+}
+
+.LookAroundStudio {
+    margin-left: 200px;
+}
+
+ul.thumbs {
+    position: absolute;
+    clear: both;
+    margin-left: 500px;
+    margin-top: -336px;
+    padding: 0px;
+    width: 290px;
 }
 
 /*controling the buttons position*/
 ul.thumbs li {
-	float: left;
-	padding: 1px;
-	margin-top:5px;
-	/*margin: 5px 10px 5px 0;*/
-	list-style: none;
+    float: left;
+    padding: 1px;
+    margin-top: 5px;
+    /*margin: 5px 10px 5px 0;*/
+    list-style: none;
 }
 
 
 a.thumb {
-	/*padding: 0px;*/
-	display:block;
-	/*border: 1px solid #ccc;*/
+    /*padding: 0px;*/
+    display: block;
+    /*border: 1px solid #ccc;*/
 }
 
 ul.thumbs li.selected a.thumb {
-	/*background: #000;*/
+    /*background: #000;*/
 }
+
 a.thumb:focus {
-	outline: none;
+    outline: none;
 }
+
 ul.thumbs img {
-	border: none;
-	display: block;
-	width:20px;/*Customizing the image in the thumbnails*/
-	height:20px;
-	
+    border: none;
+    display: block;
+    width: 20px;
+    /*Customizing the image in the thumbnails*/
+    height: 20px;
+
 }
+
 div.pagination {
-	clear: both;
+    clear: both;
 }
+
 /*The Top navigation controls*/
 div.navigation div.top {
-	position:absolute;
-	margin-left:500px;
-	margin-top:-354px;
-	margin-bottom: 12px;
-	height: 11px;
+    position: absolute;
+    margin-left: 500px;
+    margin-top: -354px;
+    margin-bottom: 12px;
+    height: 11px;
 }
 
 div.navigation div.bottom {
-	margin-top: 12px;
+    margin-top: 12px;
 }
+
 /*Non selected navigation control*/
-div.pagination a, div.pagination span.current, div.pagination span.ellipsis {
-	/*float: left;*/
-	width:55px;
-	padding:3px;
-	margin-right: 2px;
-	font-size:small;
-	color:#ffffff;
-    font-family:'Adobe Heiti Std R';
-	background-position: 100% -35px;
-	background-image:url("tabsbg2.png");
+div.pagination a,
+div.pagination span.current,
+div.pagination span.ellipsis {
+    /*float: left;*/
+    width: 55px;
+    padding: 3px;
+    margin-right: 2px;
+    font-size: small;
+    color: #ffffff;
+    font-family: 'Adobe Heiti Std R';
+    background-position: 100% -35px;
+    background-image: url("tabsbg2.png");
 
 }
+
 /*Hover Navigation*/
-div.pagination a:hover 
-{
-    color:#afc4be;
-	/*background-color: #eee;
+div.pagination a:hover {
+    color: #afc4be;
+    /*background-color: #eee;
 	text-decoration: none;*/
-	background-position: 100% -38px;
-	background-image:url("tabsbg2.png");
+    background-position: 100% -38px;
+    background-image: url("tabsbg2.png");
 }
 
 
 /*Selected navigation*/
 div.pagination span.current {
-	/*font-weight: bold;*/
-	/*border-color: #000;*/
-	color: #afc4be;
-	background-position: 100% -70px;
-	width:120px;
-	background-image:url("tabsbg2.png");
+    /*font-weight: bold;*/
+    /*border-color: #000;*/
+    color: #afc4be;
+    background-position: 100% -70px;
+    width: 120px;
+    background-image: url("tabsbg2.png");
 }
+
 div.pagination span.ellipsis {
-	border: none;
-	padding: 5px 0 3px 2px;
+    border: none;
+    padding: 5px 0 3px 2px;
 }
